--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -1,1 +1,14 @@
 /* CSS Demo Stylesheet */
+/* box sizing */
+html {
+    box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+/* global styles */
+body{
+    
+}
