--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -21,7 +21,11 @@ img{
 body{
 font-family: "Montserrat", sans-serif;
 margin:0;  
+line-height:1.5;
+url("")
 }
+
+
 
 header.primary{
 background-color:#B065E6;
@@ -118,6 +122,7 @@ header.primary nav a:hover{
   border-bottom: 1px solid #ccc;
   padding: 15px 0;
   margin: auto;
+  flex-direction:column;
 }
 
 #content .post{
@@ -146,6 +151,13 @@ img{
 #content a:hover{
   text-decoration:none;
 }
+
+#practice{
+    background-image:url("../img/");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
 
 #practice h2{
   color: #B065E6;
@@ -198,13 +210,50 @@ img{
   background-color: #B065E6;
   padding: 8px;
 }
-#practice ta{
-}
 #practice td{
   border:1px solid #cccccc;
   border-collapse:collapse;
   padding:4px;
   text-align:center;
+}
+
+#practice ol{
+    list-style-type:lower-roman;
+}
+
+#pracice ul ul{
+    color:#B065E6;
+}
+
+#practice dt{
+    font-weight:bold;
+    
+}
+
+#practice dd{
+    margin-left:0;
+    
+}
+
+dd + dt {
+  margin-top:20px;
+}
+
+#practice blockquote{
+  border: 4px double #ffffff;
+  padding:20px 40px;
+  margin:40px 80px;
+  border-radius:30px 0;
+  background-color: #8046E8;
+  color:#fff;
+  text-shadow:1px 1px #000;
+}
+
+#practice blockquote cite{
+  display:block;
+  font-size:1rem;
+  text-align:right;
+  margin-top:0px;
 }
 
 aside[role="complementary"]{
